Updated title, added powered by.

--- a/RotationMatrixVisualizer.html
+++ b/RotationMatrixVisualizer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - buffergeometry - lines</title>
+		<title>Rotation Matrix Visualizer</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<style>
@@ -38,6 +38,7 @@
 		<div id="container">
 			<div id="form">
 				<p>
+					Powered by <a href="http//threejs.org">Three.js</a><br/>
 					Comma seperated, row-major matrix:
 				</p>
 				<textarea id="matrix">1, 0, 0, 
