--- a/RotationMatrixVisualizer.html
+++ b/RotationMatrixVisualizer.html
@@ -38,7 +38,7 @@
 		<div id="container">
 			<div id="form">
 				<p>
-					Powered by <a href="http//threejs.org">Three.js</a><br/>
+					Powered by <a href="http://threejs.org">Three.js</a><br/>
 					Comma seperated, row-major matrix:
 				</p>
 				<textarea id="matrix">1, 0, 0, 
